**************
NSCA Changelog
**************


2.6 - ??/??/2006
----------------
- Spec file fix
- Segfault fix in encryption library cleanup


2.5 - 01/21/2006
----------------
- Native TCP wrapper support in daemon mode
- Memory leak fix and cleanup (Mark Ferlatte)
- Compiler warning fix (David Binderman)
- max_packet_age=0 will disable packet timestamp checks
- New config.sub and config.guess for checking local system type


2.4 - 07/23/2003
----------------
- Better support for u_int32_t detection
- Minor bug fixes


2.3 - 01/26/2003
----------------
- Minor changes to daemon init code
- Minor Makefile fixes


2.2 - 01/08/2002
----------------
- Hopefully better support for Solaris (u_int32_t)
- Syntax changes for command line arguments
- Added support for passive host checks (supported
  only in Nagios 2.x and later)
- Added sample xinetd config file (nsca.xinetd)
- Minor mods and bug fixes


2.1 - 06/10/2002
----------------
- Fix for compiling under Solaris (Scott Cokely)
- Added setuid/setgid option to config file


2.0 - 02/21/2002
----------------
- Name and version change


1.2.0 - 02/12/2002
------------------
- Compatability between older versions has been broken!
- Server now sends client IV and timestamp, fixing
  encryption problems and making it more resistent
  to "replay" attacks (Ralf Ertzinger)
- Random IV is now seeded from /dev/urandom instead
  of time() if possible
- Added directions on running under xinetd to README
- Implemented Beej's sendall() to handle incomplete send()s
- Added single-mode daemon code (David Luyer)
- Fixed problem with aggregated writes (David Luyer)
- Better autoconf detection of libmcrypt (Jay McCarthy)
- Added ability to dump check results to alternate
  dump file if command file does not exist (i.e. NetSaint
  is not running)
- Removed some old crud


1.1.2 - 09/22/2001
------------------
- Added append_to_file option to allow for opening the
  command file in either write or append mode